# gscore-login

./: .env.example  .gitignore  README.md  login_env.py  main.py  pyproject.toml  requirements.txt
login/dna/: dna.py  main.py  schemas.py  service.py  state.py
login/dna/routers/: __init__.py  _helpers.py  auth.py  page.py  transport_http.py  transport_sse.py  transport_ws.py
login/dna/templates/: 404.html  done.html  login.html
login/nte/: laohu.py  main.py  service.py  state.py
login/nte/routers/: __init__.py  _helpers.py  auth.py  transport_sse.py  transport_ws.py
login/utils/: base.py  logger.py
login/ww/: main.py
login/ww/templates/: done.html  index.html
templates/: index.html
