[project]
name = "gscore-login"
version = "0.1.0"
description = "gscore外置登录服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.130.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.0",
    "uvicorn[standard]>=0.40.0",
]


[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
